--- a/modules/home/swaync/style.css
+++ b/modules/home/swaync/style.css
@@ -6,36 +6,19 @@
 *
 */
 
-@define-color base   #1E1D2E;
-@define-color mantle #181825;
-@define-color crust  #11111b;
+@define-color base #3C3836;
+@define-color mantle #282828;
+@define-color crust #1D2021;
 
-@define-color text     #cdd6f4;
-@define-color subtext0 #a6adc8;
-@define-color subtext1 #bac2de;
+@define-color text #FBF1C7;
+@define-color subtext0 #CBDBB2;
+@define-color subtext1 #D5C4A1;
 
-@define-color surface0 #313244;
-@define-color surface1 #45475a;
-@define-color surface2 #585b70;
+@define-color surface0 #3C3836;
+@define-color surface1 #665C54;
+@define-color surface2 #7C6F64;
 
-@define-color overlay0 #6c7086;
-@define-color overlay1 #7f849c;
-@define-color overlay2 #9399b2;
-
-@define-color blue      #89b4fa;
-@define-color lavender  #b4befe;
-@define-color sapphire  #74c7ec;
-@define-color sky       #89dceb;
-@define-color teal      #94e2d5;
-@define-color green     #a6e3a1;
-@define-color yellow    #f9e2af;
-@define-color peach     #fab387;
-@define-color maroon    #eba0ac;
-@define-color red       #f38ba8;
-@define-color mauve     #cba6f7;
-@define-color pink      #f5c2e7;
-@define-color flamingo  #f2cdcd;
-@define-color rosewater #f5e0dc;
+@define-color lavender #D65D0E;
 
 * {
     font-family: "NotoSansMono Nerd Font";
@@ -47,7 +30,7 @@
 /* } */
 
 label {
-  color: @text;
+    color: @text;
 }
 
 .notification {
@@ -188,7 +171,7 @@ label {
 .notification-group {
     /* opacity: 1.0; */
     /* opacity: 0; */
-  color: alpha(@theme_text_color, 0.50);
+    color: alpha(@theme_text_color, 0.50);
 }
 
 .notification-group {
@@ -200,7 +183,8 @@ label {
     box-shadow: none;
     /* selectable: no; */
 }
-.notification-group > box {
+
+.notification-group>box {
     all: unset;
     background: @mantle;
     /* background: alpha(currentColor, 0.072); */
@@ -230,9 +214,9 @@ label {
     box-shadow: none;
 }
 
-.control-center-list > row,
-.control-center-list > row:focus,
-.control-center-list > row:hover {
+.control-center-list>row,
+.control-center-list>row:focus,
+.control-center-list>row:hover {
     background: transparent;
     border: none;
     margin: 0px;
@@ -240,7 +224,7 @@ label {
     box-shadow: none;
 }
 
-.control-center-list > row:last-child {
+.control-center-list>row:last-child {
     padding: 5px 10px 10px 10px;
 }
 
@@ -263,23 +247,24 @@ label {
     padding-bottom: 20px;
 }
 
-.widget-title > label {
+.widget-title>label {
     margin: 18px 10px;
     font-size: 20px;
     font-weight: 500;
 }
 
-.widget-title > button {
+.widget-title>button {
     font-weight: 700;
     padding: 7px 3px;
-    margin-right: 10px; 
+    margin-right: 10px;
     background: @mantle;
     color: @text;
     /* color: @theme_text_color; */
     /* border: none; */
     border-radius: 4px;
 }
-.widget-title > button:hover {
+
+.widget-title>button:hover {
     background: @base;
     /* background: alpha(currentColor, 0.1); */
 }
@@ -295,7 +280,8 @@ label {
     /* border: 1px solid @surface1; */
     border-top: none;
 }
-.widget-label > label {
+
+.widget-label>label {
     font-size: 0px;
     font-weight: 400;
 }
@@ -308,13 +294,15 @@ label {
     border-top: none;
     border-bottom: none;
 }
-.widget-menubar > box > box {
+
+.widget-menubar>box>box {
     margin: 5px 10px 5px 10px;
     min-height: 40px;
     border-radius: 4px;
     background: transparent;
 }
-.widget-menubar > box > box > button {
+
+.widget-menubar>box>box>button {
     background: @mantle;
     /* background: alpha(currentColor, 0.05); */
     min-width: 85px;
@@ -323,25 +311,29 @@ label {
     font-size: 17px;
     padding: 0px;
 }
-.widget-menubar > box > box > button:nth-child(4) {
+
+.widget-menubar>box>box>button:nth-child(4) {
     margin-right: 0px;
 }
+
 .widget-menubar button:focus {
     box-shadow: none;
 }
+
 .widget-menubar button:focus:hover {
     background: @base;
     /* background: alpha(currentColor,0.1); */
     box-shadow: none;
 }
 
-.widget-menubar > box > revealer > box {
+.widget-menubar>box>revealer>box {
     margin: 5px 10px 5px 10px;
     background: @mantle;
     /* background: alpha(currentColor, 0.05); */
     border-radius: 4px;
 }
-.widget-menubar > box > revealer > box > button {
+
+.widget-menubar>box>revealer>box>button {
     background: transparent;
     min-height: 50px;
     padding: 0px;
@@ -362,7 +354,7 @@ label {
     border-radius: 0px;
 }
 
-.widget-buttons-grid > flowbox > flowboxchild {
+.widget-buttons-grid>flowbox>flowboxchild {
     background: @mantle;
     /* background: alpha(currentColor, 0.05); */
     border-radius: 4px;
@@ -372,7 +364,7 @@ label {
     padding: 0px;
 }
 
-.widget-buttons-grid > flowbox > flowboxchild > button {
+.widget-buttons-grid>flowbox>flowboxchild>button {
     background: transparent;
     border-radius: 4px;
     margin: 0px;
@@ -381,7 +373,7 @@ label {
 }
 
 
-.widget-buttons-grid > flowbox > flowboxchild > button:hover {
+.widget-buttons-grid>flowbox>flowboxchild>button:hover {
     background: @mantle;
     /* background: alpha(currentColor, 0.1); */
 }
@@ -393,7 +385,8 @@ label {
     padding-top: 35px;
     margin-bottom: -33px;
 }
-.widget-mpris > box {
+
+.widget-mpris>box {
     padding: 0px;
     margin: -5px 0px -10px 0px;
     padding: 0px;
@@ -401,39 +394,44 @@ label {
     /* background: alpha(currentColor, 0.05); */
     background: @mantle;
 }
-.widget-mpris > box > button:nth-child(1),
-.widget-mpris > box > button:nth-child(3) {
+
+.widget-mpris>box>button:nth-child(1),
+.widget-mpris>box>button:nth-child(3) {
     margin-bottom: 0px;
 }
-.widget-mpris > box > button:nth-child(1) {
+
+.widget-mpris>box>button:nth-child(1) {
     margin-left: -25px;
     margin-right: -25px;
     opacity: 0;
 }
-.widget-mpris > box > button:nth-child(3) {
+
+.widget-mpris>box>button:nth-child(3) {
     margin-left: -25px;
     margin-right: -25px;
     opacity: 0;
 }
 
 .widget-mpris-album-art {
-  all: unset;
+    all: unset;
 }
 
 /* Player button box */
-.widget-mpris > box > carousel > widget > box > box:nth-child(2) {
+.widget-mpris>box>carousel>widget>box>box:nth-child(2) {
     margin: 5px 0px -5px 90px;
 }
 
 /* Player buttons */
-.widget-mpris > box > carousel > widget > box > box:nth-child(2) > button {
+.widget-mpris>box>carousel>widget>box>box:nth-child(2)>button {
     border-radius: 4px;
 }
-.widget-mpris > box > carousel > widget > box > box:nth-child(2) > button:hover {
+
+.widget-mpris>box>carousel>widget>box>box:nth-child(2)>button:hover {
     background: alpha(currentColor, 0.1);
 }
+
 carouselindicatordots {
-	opacity: 0;
+    opacity: 0;
 }
 
 .widget-mpris-title {
@@ -442,6 +440,7 @@ carouselindicatordots {
     font-size: 1.25rem;
     text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
 }
+
 .widget-mpris-subtitle {
     color: #eeeeee;
     font-size: 1rem;
@@ -449,16 +448,17 @@ carouselindicatordots {
 }
 
 .widget-mpris-player {
-  border-radius: 0px;
-	margin: 0px;
+    border-radius: 0px;
+    margin: 0px;
 }
-.widget-mpris-player > box > image {
+
+.widget-mpris-player>box>image {
     margin: 0px 0px -48px 0px;
 }
 
-.notification-group > box.vertical {
-  /* border: solid 5px red; */
-  margin-top: 3px
+.notification-group>box.vertical {
+    /* border: solid 5px red; */
+    margin-top: 3px
 }
 
 /* Backlight and volume widgets */
@@ -468,50 +468,59 @@ carouselindicatordots {
     /* background-color: @theme_bg_color; */
     /* border: 1px solid @surface1; */
     border-top: none;
-    border-bottom: none; font-size: 13px;
+    border-bottom: none;
+    font-size: 13px;
     font-weight: 600;
     border-radius: 0px;
     margin: 0px;
     padding: 0px;
 }
-.widget-volume > box {
+
+.widget-volume>box {
     background: @mantle;
     /* background: alpha(currentColor, 0.05); */
     border-radius: 4px;
     margin: 5px 10px 5px 10px;
     min-height: 50px;
 }
-.widget-volume > box > label {
+
+.widget-volume>box>label {
     min-width: 50px;
     padding: 0px;
 }
-.widget-volume > box > button {
+
+.widget-volume>box>button {
     min-width: 50px;
     box-shadow: none;
     padding: 0px;
 }
-.widget-volume > box > button:hover {
+
+.widget-volume>box>button:hover {
     /* background: alpha(currentColor, 0.05); */
     background: @surface0;
 }
-.widget-volume > revealer > list {
+
+.widget-volume>revealer>list {
     background: @mantle;
     /* background: alpha(currentColor, 0.05); */
     border-radius: 4px;
     margin-top: 5px;
     padding: 0px;
 }
-.widget-volume > revealer > list > row {
+
+.widget-volume>revealer>list>row {
     padding-left: 10px;
     min-height: 40px;
     background: transparent;
 }
-.widget-volume > revealer > list > row:hover {
+
+.widget-volume>revealer>list>row:hover {
     background: transparent;
     box-shadow: none;
     border-radius: 4px;
 }
-.widget-backlight > scale {
+
+.widget-backlight>scale {
     background: @mantle;
     /* background: alpha(currentColor, 0.05); */
     border-radius: 0px 4px 4px 0px;
@@ -519,7 +528,8 @@ carouselindicatordots {
     padding: 0px 10px 0px 0px;
     min-height: 50px;
 }
-.widget-backlight > label {
+
+.widget-backlight>label {
     background: @surface0;
     /* background: alpha(currentColor, 0.05); */
     margin: 5px 0px 5px 10px;
@@ -531,26 +541,26 @@ carouselindicatordots {
 
 /* DND widget */
 .widget-dnd {
-  margin: 8px;
-  font-size: 1.1rem;
-  padding-top: 20px;
+    margin: 8px;
+    font-size: 1.1rem;
+    padding-top: 20px;
 }
 
 .widget-dnd>switch {
-  font-size: initial;
-  border-radius: 12px;
-  background: @surface0;
-  border: 1px solid @lavender;
-  box-shadow: none;
+    font-size: initial;
+    border-radius: 12px;
+    background: @surface0;
+    border: 1px solid @lavender;
+    box-shadow: none;
 }
 
 .widget-dnd>switch:checked {
-  background: @surface2;
+    background: @surface2;
 }
 
 .widget-dnd>switch slider {
-  background: @lavender;
-  border-radius: 12px;
+    background: @lavender;
+    border-radius: 12px;
 }
 
 /* Toggles */
@@ -558,6 +568,7 @@ carouselindicatordots {
     background: @surface1;
     /* background: @theme_selected_bg_color; */
 }
+
 /*.toggle:not(:checked) {
     color: rgba(128, 128, 128, 0.5);
 }*/
@@ -592,10 +603,9 @@ scale slider {
     box-shadow: none;
     padding: 0px;
 }
-scale slider:hover {
-}
+
+scale slider:hover {}
 
 .right.overlay-indicator {
-  all: unset;
+    all: unset;
 }
-
