change swaync config

--- a/modules/home/swaync/style.css
+++ b/modules/home/swaync/style.css
@@ -142,9 +142,9 @@ label {
     /* background: transparent; */
     background: @crust;
     /* background: @theme_bg_color; */
-    /* border: 1px solid @surface0; */
-    border-radius: 5px;
-    /* box-shadow: 0px 0px 2px black; */
+    border: 2px solid @surface0;
+    border-radius: 4px;
+    box-shadow: 0px 0px 2px black;
 }
 
 /* .right.overlay-indicator { */
